--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=http://localhost:8081/api/v1
+VITE_AUTH_API_BASE_URL=http://localhost:8081/api/v1
 VITE_APP_NAME=HistopathAI
 VITE_APP_ENV=development
 
