--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-VITE_AUTH_API_BASE_URL=http://localhost:8081/api/v1
+VITE_BACKEND_URL=http://localhost:8081/api/v1
 VITE_APP_NAME=HistopathAI
 VITE_APP_ENV=development
-
 # Firebase Yapılandırması (Kendi gerçek değerlerinizle doldurun!)
 VITE_FIREBASE_API_KEY="YOUR_API_KEY"
 VITE_FIREBASE_AUTH_DOMAIN="YOUR_AUTH_DOMAIN"
