--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -41,17 +41,8 @@ jobs:
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy ${REPO_NAME} \
-            --image ${REGION}-docker.pkg.dev/${PROJECT_ID}/histopath-docker-repo/${REPO_NAME}:latest \
-            --region ${REGION} \
-            --platform managed \
-            --allow-unauthenticated \
-            --set-env-vars VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }},\
-                VITE_APP_NAME=${{ secrets.VITE_APP_NAME }},\
-                VITE_APP_ENV=${{ secrets.VITE_APP_ENV }},\
-                VITE_FIREBASE_API_KEY=${{ secrets.VITE_FIREBASE_API_KEY }},\
-                VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }},\
-                VITE_FIREBASE_PROJECT_ID=${{ secrets.VITE_FIREBASE_PROJECT_ID }},\
-                VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.VITE_FIREBASE_STORAGE_BUCKET }},\
-                VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }},\
-                VITE_FIREBASE_APP_ID=${{ secrets.VITE_FIREBASE_APP_ID }},\
-                VITE_FIREBASE_MEASUREMENT_ID=${{ secrets.VITE_FIREBASE_MEASUREMENT_ID }}
+          --image ${REGION}-docker.pkg.dev/${PROJECT_ID}/histopath-docker-repo/${REPO_NAME}:latest \
+          --region ${REGION} \
+          --platform managed \
+          --allow-unauthenticated \
+          --set-env-vars VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }},VITE_APP_NAME=${{ secrets.VITE_APP_NAME }},VITE_APP_ENV=${{ secrets.VITE_APP_ENV }},VITE_FIREBASE_API_KEY=${{ secrets.VITE_FIREBASE_API_KEY }},VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }},VITE_FIREBASE_PROJECT_ID=${{ secrets.VITE_FIREBASE_PROJECT_ID }},VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.VITE_FIREBASE_STORAGE_BUCKET }},VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }},VITE_FIREBASE_APP_ID=${{ secrets.VITE_FIREBASE_APP_ID }},VITE_FIREBASE_MEASUREMENT_ID=${{ secrets.VITE_FIREBASE_MEASUREMENT_ID }}
