--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -13,7 +13,6 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-      PROJECT_NUMBER: ${{ secrets.GCP_PROJECT_NUMBER }}
       REGION: ${{ secrets.GCP_REGION }}
 
     steps:
@@ -35,14 +34,24 @@ jobs:
 
       - name: Build and Push Docker image
         run: |
-          docker build -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/histopath-docker-repo/${{ env.REPO_NAME }}:latest .
+          docker build \
+            --build-arg VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }} \
+            --build-arg VITE_APP_NAME=${{ secrets.VITE_APP_NAME }} \
+            --build-arg VITE_APP_ENV=${{ secrets.VITE_APP_ENV }} \
+            --build-arg VITE_FIREBASE_API_KEY=${{ secrets.VITE_FIREBASE_API_KEY }} \
+            --build-arg VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }} \
+            --build-arg VITE_FIREBASE_PROJECT_ID=${{ secrets.VITE_FIREBASE_PROJECT_ID }} \
+            --build-arg VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.VITE_FIREBASE_STORAGE_BUCKET }} \
+            --build-arg VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }} \
+            --build-arg VITE_FIREBASE_APP_ID=${{ secrets.VITE_FIREBASE_APP_ID }} \
+            --build-arg VITE_FIREBASE_MEASUREMENT_ID=${{ secrets.VITE_FIREBASE_MEASUREMENT_ID }} \
+            -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/histopath-docker-repo/${{ env.REPO_NAME }}:latest .
           docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/histopath-docker-repo/${{ env.REPO_NAME }}:latest
 
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy ${REPO_NAME} \
-          --image ${REGION}-docker.pkg.dev/${PROJECT_ID}/histopath-docker-repo/${REPO_NAME}:latest \
-          --region ${REGION} \
-          --platform managed \
-          --allow-unauthenticated \
-          --set-env-vars VITE_BACKEND_URL=${{ secrets.VITE_BACKEND_URL }},VITE_APP_NAME=${{ secrets.VITE_APP_NAME }},VITE_APP_ENV=${{ secrets.VITE_APP_ENV }},VITE_FIREBASE_API_KEY=${{ secrets.VITE_FIREBASE_API_KEY }},VITE_FIREBASE_AUTH_DOMAIN=${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }},VITE_FIREBASE_PROJECT_ID=${{ secrets.VITE_FIREBASE_PROJECT_ID }},VITE_FIREBASE_STORAGE_BUCKET=${{ secrets.VITE_FIREBASE_STORAGE_BUCKET }},VITE_FIREBASE_MESSAGING_SENDER_ID=${{ secrets.VITE_FIREBASE_MESSAGING_SENDER_ID }},VITE_FIREBASE_APP_ID=${{ secrets.VITE_FIREBASE_APP_ID }},VITE_FIREBASE_MEASUREMENT_ID=${{ secrets.VITE_FIREBASE_MEASUREMENT_ID }}
+            --image ${REGION}-docker.pkg.dev/${PROJECT_ID}/histopath-docker-repo/${REPO_NAME}:latest \
+            --region ${REGION} \
+            --platform managed \
+            --allow-unauthenticated
