--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@recogito/annotorious-openseadragon": "^2.7.18",
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "@recogito/annotorious-openseadragon": "^2.7.18",
     "axios": "^1.10.0",
     "firebase": "^10.14.1",
     "openseadragon": "^4.1.0",
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vitest/eslint-plugin": "^1.2.7",
     "@vue/eslint-config-prettier": "^10.2.0",
